tests/chapter_11/invalid_parse/long_constant_as_var.c
int main(void) {
    /* You can't use a LONG64 constant where an identifier is required */
    int 10l;
    return 0;
}